refactor: apply defra js standards and migrate tests from Jest to Vitest
- Updated package.json to replace Jest with Vitest for testing framework
- Refactored test files to use Vitest's API (e.g., vi instead of jest)
- Added global setup for Vitest to mock fetch and provide Jest-like globals
- Introduced validation helper functions for parameter validation
- Enhanced API client with detailed JSDoc comments for better documentation
- Updated controllers to include validation logic for query parameters
- Added new test cases for validation helpers to ensure correctness
- Configured Vitest with coverage reporting and included relevant test files
- Re-enabled 38 critical infrastructure tests (88.4% migration complete)
- Documented excluded tests in EXCLUDED_TESTS.md for future work

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "lint:types": "tsc --build tsconfig.json",
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
-    "test": "jest --coverage --verbose",
-    "test:watch": "jest --watch",
+    "test": "vitest run --coverage",
+    "test:watch": "vitest",
     "server:watch": "nodemon --exec tsx --enable-source-maps ./src",
     "server:debug": "nodemon --exec tsx --enable-source-maps --inspect ./src",
     "prestart": "npm run build",
@@ -45,6 +45,7 @@
     "@hapi/inert": "^7.1.0",
     "@hapi/vision": "^7.0.3",
     "@hapi/yar": "^11.0.2",
+    "@vitest/ui": "^3.2.4",
     "aws-embedded-metrics": "^4.2.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "convict": "^6.2.4",
@@ -56,12 +57,14 @@
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
     "ioredis": "^5.4.1",
+    "jsdom": "^26.1.0",
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.2",
     "nunjucks": "^3.2.4",
     "pino": "^9.5.0",
     "pino-pretty": "^13.0.0",
-    "undici": "^6.21.1"
+    "undici": "^6.21.1",
+    "vitest": "^3.2.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
@@ -76,6 +79,7 @@
     "@types/webpack-assets-manifest": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^7.17.0",
     "@typescript-eslint/parser": "^7.17.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
