--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "build:server": "NODE_ENV=production babel --delete-dir-on-start --ignore \"**/*.test.js\" --ignore \"**/test-helpers\" --copy-files --no-copy-ignored --out-dir ./.server ./src",
     "dev": "run-p frontend:watch server:watch",
     "dev:debug": "run-p frontend:watch server:debug",
-    "format": "prettier --write \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js}\"",
-    "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js}\"",
     "frontend:watch": "NODE_ENV=development webpack --watch",
-    "git:pre-commit-hook": "npm run format:check && npm run lint && npm test",
-    "postinstall": "npm run setup:husky && npm run build",
+    "postinstall": "npm run build",
     "lint": "run-s lint:js lint:scss lint:types",
-    "lint:fix": "eslint . --fix",
-    "lint:js": "eslint .",
+    "lint:fix": "eslint src/ --fix",
+    "lint:js": "eslint src/",
     "lint:types": "tsc --build tsconfig.json",
     "lint:scss": "stylelint \"src/**/*.scss\" --cache --cache-location .cache/stylelint --cache-strategy content --color --ignore-path .gitignore",
     "postversion": "git add package.json package-lock.json && git commit -m $npm_package_version",
@@ -30,8 +27,7 @@
     "server:watch": "nodemon --exec tsx --enable-source-maps ./src",
     "server:debug": "nodemon --exec tsx --enable-source-maps --inspect ./src",
     "prestart": "npm run build",
-    "start": "NODE_ENV=production node --use-strict .",
-    "setup:husky": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
+    "start": "NODE_ENV=production node --use-strict ."
   },
   "author": "Defra DDTS",
   "license": "OGL-UK-3.0",
@@ -72,41 +68,23 @@
     "@babel/preset-env": "^7.26.0",
     "@types/convict": "^6.1.6",
     "@types/hapi__catbox-memory": "^4.1.8",
-    "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.13",
     "@types/node": "22.9.0",
     "@types/nunjucks": "^3.2.6",
     "@types/webpack-assets-manifest": "^5.1.4",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
-    "@typescript-eslint/parser": "^7.17.0",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.20",
-    "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "babel-plugin-transform-import-meta": "^2.2.1",
     "cheerio": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-import-resolver-typescript": "^3.6.3",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-jest": "^28.8.3",
-    "eslint-plugin-jest-formatting": "^3.1.0",
-    "eslint-plugin-jsdoc": "^48.8.3",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^6.4.0",
-    "husky": "^9.1.6",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-fetch-mock": "3.0.3",
+    "eslint": "^9.30.0",
+    "neostandard": "^0.12.1",
     "nodemon": "^3.1.7",
     "npm-run-all": "^4.1.5",
     "postcss-load-config": "^6.0.1",
     "postcss-loader": "^8.1.1",
-    "prettier": "^3.3.3",
     "sass-embedded": "^1.80.6",
     "sass-loader": "^16.0.3",
     "source-map-loader": "^5.0.0",
