--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "skipLibCheck": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
-    "types": ["jest"]
+    "types": ["vitest/globals"]
   },
   "exclude": [".cache", ".public", ".server", "coverage", "node_modules"],
   "include": ["**/*.cjs", "**/*.js", ".eslintrc.*", ".prettierrc.*"]
